UI alignment fixes

--- a/src/scss/lw/transactions.scss
+++ b/src/scss/lw/transactions.scss
@@ -77,3 +77,7 @@
     color: $lw-text-primary;
   }
 }
+
+.lw-transactions-asset-image > div {
+  justify-content: center;
+}
